# csv2tabulate

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  pyproject.toml  tox.ini
csv2tabulate/: __init__.py  cli.py  converter.py
tests/: test_csv2tabulate.py
