[tool.poetry]
name = "csv2tabulate"
version = "0.1.0"
description = "Convert CSV files to tables using python-tabulate"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/frafra/csv2tabulate"
classifiers = [
    "Topic :: Text Editors :: Text Processing"
]

[tool.poetry.dependencies]
python = "^3.6"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pre-commit = "^2.1.1"
tox = "^3.14.4"
pytest-cov = "^2.9.0"

[tool.poetry.scripts]
csv2tabulate = 'csv2tabulate.cli:main'

[tool.black]
line-length = 79
target-version = ['py36']

[tool.isort]
line-length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
